# hotmodel

./: .flake8  .gitignore  .pre-commit-config.yaml  Home.py  README.md  pyproject.toml
hotmodel/: data_loader.py  hotplot.py  model.py  stats.py
input/model_config/: hyperparameter.json
pages/: 1_About.py  1_Sobre.py
