[tool.poetry]
name = "hotmodel"
version = "0.1.0"
description = "Analyzing output of Hotmart A/B test and building model to identify which model is the best."
authors = ["Clebson Cardoso <clebsondm@gmail.com>"]
readme = "README.md"
packages = [
    {include = "hotmodel"}
]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
streamlit = "^1.29.0"
pandas = "^2.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pyright = "^1.1.338"
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ipython = "^8.18.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["hotmodel"]
exclude = []
reportMissingImports = true
reportMissingTypeStubs = false
reportSelfClsParameterName = "error"
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
